2004-04-01  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/ioctl.c (__ioctl): Use
	__tcgetattr() instead of tcgetattr().

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/makecontext.S [SHARED]:
	Use __GI_exit.

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/clone.S [SHARED]: Use
	__GI__exit.

	* sysdeps/powerpc/fpu/bits/mathinline.h: Addn __signbitf and
	__signbit inlines.

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/getcontext.S: Use
	__sigprocmask not sigprocmask.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/setcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/swapcontext.S: Likewise.

	* elf/elf.h: Define more ppc64 specific dynamic tags.

2004-04-01  Jakub Jelinek  <jakub@redhat.com>

	* nis/nss_nis/nis-service.c (_nss_nis_getservbyname_r): If protocol
	is NULL, instead of trying yp_match (name/tcp), yp_match (name/udp),
	yp_all, try yp_match (name), yp_all.

2004-04-01  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-sysdep.c (_dl_show_auxv): Add handling for
	ignored entries.  Ignore AT_IGNOREPPC.

2004-03-31  Andreas Jaeger  <aj@suse.de>

	* libio/fileops.c (new_do_write): Return _IO_size_t to make 64-bit
        clean.

2004-03-31  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/localedef.c (construct_output_path): Remove
	remnants of CEN locale names.

2004-03-30  Thorsten Kukuk  <kukuk@suse.de>

	* sysdeps/unix/sysv/linux/alpha/bits/termios.h: Add IUTF8.
	* sysdeps/unix/sysv/linux/bits/termios.h: Likewise.
	* sysdeps/unix/sysv/linux/mips/bits/termios.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/termios.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/termios.h: Likewise.

2004-03-30  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/remqu.S: Detect power-of-two special case.

2004-03-30  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/libc-start.c (LIBC_START_MAIN)
	[HAVE_CLEANUP_JMP_BUF]: Call __nptl_deallocate_tsd.

2004-03-30  Jakub Jelinek  <jakub@redhat.com>
